# numpy-financial

./: .gitignore  README.md  README.txt  asv.conf.json  environment.yml  genindex.html  index.html  meson.build  nper.html  numpy_financial.fv.html  numpy_financial.ipmt.html  numpy_financial.irr.html  numpy_financial.mirr.html  numpy_financial.nper.html  numpy_financial.npv.html  numpy_financial.pmt.html  numpy_financial.ppmt.html  numpy_financial.pv.html  numpy_financial.rate.html  objects.inv  pyproject.toml  rate.html  requirements.txt  search.html  searchindex.js  setup.py
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: circleci_redirect.yml  lint.yml  publish_docs_to_pages.yml  pythonpackage.yml  type_check.yml
_static/: pyramid.css
benchmarks/: benchmarks.py
dev/: fv.html  genindex.html  index.html  ipmt.html  irr.html  mirr.html  nper.html  npv.html  objects.inv  pmt.html  ppmt.html  pv.html  rate.html  release-notes.html  search.html  searchindex.js
dev/_static/: bizstyle.js  documentation_options.js
doc/source/: api.rst  conf.py  generate_rst_function_files.py  index.rst  irr.rst  nper.rst  npv.rst  numpy_financial.fv.rst  numpy_financial.ipmt.rst  numpy_financial.mirr.rst  numpy_financial.pmt.rst  numpy_financial.ppmt.rst  numpy_financial.rate.rst  pv.rst  release-notes.rst
doc/source/dev/: building_the_docs.md  building_with_spin.md  checking_out_an_upstream_pr.md  getting_the_code.md  index.rst  running_the_benchmarks.md
doc/source/doc_developer/: building_with_poetry.rst  getting_the_code.rst
doc_developer/: building_the_docs.md  building_with_poetry.md  editing_someone_elses_pr.md  getting_the_code.md  how_to_run_benchmarks.rst
docweb/: index.html
docweb/css/: home.css
latest/: index.html  searchindex.js
numpy_financial/: __init__.py  _cfinancial.pyi  _cfinancial.pyx  _cy_financial.pyx  _financial.py  meson.build
numpy_financial/src/: _inner_loop.cpp  _inner_loop.h  _solve.cpp  _solve.h
numpy_financial/tests/: strategies.py  test_financial.py
tests/: meson.build  strategies.py  test_financial.py
version/0.1.0/: fv.html  irr.html  searchindex.js
version/0.2.0/: ipmt.html  mirr.html  objects.inv  pmt.html  ppmt.html  release-notes.html
