[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "numpy-financial"
version = "2.0.0"
description = "Simple financial functions"
license = "BSD-3-Clause"
authors = ["Travis E. Oliphant et al."]
maintainers = ["Numpy Financial Developers <numpy-discussion@python.org>"]
readme = "README.md"
homepage = "https://numpy.org/numpy-financial/latest/"
repository = "https://github.com/numpy/numpy-financial"
documentation = "https://numpy.org/numpy-financial/latest/#functions"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
packages = [{include = "numpy_financial"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
numba = "^0.59.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
hypothesis = {extras = ["numpy"], version = "^6.99.11"}
pytest-xdist = {extras = ["psutil"], version = "^3.5.0"}


[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
numpydoc = "^1.5"
pydata-sphinx-theme = "^0.14.3"
myst-parser = "^2.0.0"



[tool.poetry.group.lint.dependencies]
ruff = "^0.3"


[tool.poetry.group.bench.dependencies]
asv = "^0.6"

