[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "Cython>=3.0.9",
    "numpy>=1.23.5",
]

[project]
name = "numpy-financial"
version = "2.0.0"
requires-python = ">=3.10"
description = "Simple financial functions"
license = "BSD-3-Clause"
authors = [{name = "Travis E. Oliphant et al."}]
maintainers = [{ name = "Numpy Financial Developers", email = "numpy-discussion@python.org" }]
readme = "README.md"
homepage = "https://numpy.org/numpy-financial/latest/"
repository = "https://github.com/numpy/numpy-financial"
documentation = "https://numpy.org/numpy-financial/latest/#functions"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "hypothesis",
]
doc = [
    "sphinx>=7.0",
    "numpydoc>=1.5",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=2.0.0",
]
dev = [
    "ruff>=0.3.0",
    "asv>=0.6.0",
]


[tool.spin]
package = 'numpy_financial'

[tool.spin.commands]
"Build" = [
  "spin.cmds.meson.build",
  "spin.cmds.meson.test",
  "spin.cmds.build.sdist",
  "spin.cmds.pip.install",
]
"Documentation" = [
  "spin.cmds.meson.docs"
]
"Environments" = [
  "spin.cmds.meson.shell",
  "spin.cmds.meson.ipython",
  "spin.cmds.meson.python",
  "spin.cmds.meson.run"
]
